examples/errors/Prism.flx
  fun main() {
    let f = fun(x, x) { x };
    print(f(1, 2));
  }
